syntax = "proto3";

import "google/protobuf/timestamp.proto";

package userService;

option go_package = ".;userService";


message User {
    string ID = 1;
    string FirstName = 2;
    string LastName = 3;
    string Email = 4;
    string Role = 5;
    google.protobuf.Timestamp CreatedAt = 7;
    google.protobuf.Timestamp UpdatedAt = 8;
}